bk_ida/gccida/g0/assemble_string
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_string/src/varasm.c:1811:6: error: use of undeclared identifier 'byte_8185A8'
v8 = byte_8185A8[*( unsigned __int8 *)v2]; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_string/src/varasm.c:1844:6: error: use of undeclared identifier 'byte_8185A8'
v6 = byte_8185A8[*v10]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/assemble_string/src/obj/varasm.o] Error 1
